objects/dupcheck__dcDelta__c.object
<CustomObject>
    <fields>
        <fullName>dupcheck__Priority__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SINGLE_INSERT</fullName>
                </value>
                <value>
                    <fullName>SINGLE_UPDATE</fullName>
                </value>
                <value>
                    <fullName>BULK_INSERT</fullName>
                </value>
                <value>
                    <fullName>BULK_UPDATE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dupcheck__key__c</fullName>
        <formula>CASESAFEID(dupcheck__object__c) + &apos;-&apos; + TEXT(dupcheck__Type__c)</formula>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__object__c</fullName>
        <label>Object</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Duplicate Check Delta</label>
    <listViews>
        <fullName>Nolan_Daigle_dcDelta</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DCD-{000000000}</displayFormat>
        <label>Duplicate Check Delta Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Check Deltas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>